updated according to the purpose of this repo

--- a/README.org
+++ b/README.org
@@ -3,21 +3,8 @@
 #+STARTUP: Overview
 * Introduction
 This repository is for practicing and learning modern c++ (post c++11) and modern cmake (post 3.0)
-The repository is based on starter project [[https://github.com/TheLartians/ModernCppStarter][ModernCppStarter]] and the cmake is loosly based on [[https://cliutils.gitlab.io/modern-cmake/][Introduction to Modern CMake]] and cmake modules from [[https://github.com/bsamseth/cpp-project][cpp-project boilerplate]].
-* Generic Guidelines
-** Repository Structure
-- As far as possible, all directories are self contained
-- Executables are in the "apps" directory, one directory per app
-- Libraries are in "libs" directory, one directory per library
-- Every app or library directory has one or all of directories viz. "include", "src", "tests"
-- Each namespace gets own directory inside the above three
-** Build System
-- CMake is primary build system(version 3.23), Bazel might be added later
-- Out of source build and dependency management
-- Every target (executable or library) CMakeLists.txt is self contained (i.e. does not depend directly on the external structure)
-- The main CMakeLists.txt makes all the dependencies available to the apps and libraries
-- [[https://github.com/cpm-cmake/CPM.cmake][CPM]] is used for external dependency download and setup
-* Building with CMake
+The repository is based on [[https://github.com/amolgawai/modern-cpp-cmake-starter][my modern-cpp-cmake-starter]].
+* * Building with CMake
 #+BEGIN_SRC shell
   # configure build with ninja
    cmake -S . -B build -GNinja
@@ -27,19 +14,9 @@ The repository is based on starter project [[https://github.com/TheLartians/Mode
    cmake --build build --target <name>
   # configure with code quality tools namely sanitizers, cppcheck, include what you use (iwyu), codecoverage
    cmake -S . -B build -GNinja -DUSE_SANITIZER='Memory;MemoryWithOrigins;Thread;Leak;Address;Undefined' -DUSE_STATIC_ANALYZER='clang-tidy;iwyu;cppcheck' -DENABLE_CODE_COVERAGE=ON -DCMAKE_BUILD_TYPE=Coverage
-  # run codecoverage for tests (e.g. greeter tests)
-   cmake --build build --target coverage_greeter
-  # open the code coverage report
-   open build/coverage_out/index.html
 #+END_SRC
 * ☛ TODO Practice Plan
 * References
-** CMake
-- [[https://cliutils.gitlab.io/modern-cmake/][An Introduction to modern CMake]]
-- [[https://pabloariasal.github.io/2018/02/19/its-time-to-do-cmake-right/][Article - It's Time to do CMake right]]
-- [[https://www.youtube.com/watch?v=y7ndUhdQuU8][YouTube - More Modern CMake]]
-- [[https://www.youtube.com/watch?v=bsXLMQ6WgIk][YouTube - Daniel Pfifer - Effective CMake]]
-** CPP
 - [[https://ccc.codes][Book - C++ Crash Course]]
 - [[https://www.stroustrup.com/tour2.html][Book - A Tour of C++]]
 - [[https://changkun.de/modern-cpp/pdf/modern-cpp-tutorial-en-us.pdf][Modern C++ Tutorial]]
